--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-image-picker": "^7.1.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-update": "^10.2.2",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
